fix css and change spacing

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -136,3 +136,8 @@ div.hanging-indent {
 ul.task-list {
 	list-style: none;
 }
+@media (max-width: 600px) {
+	body {
+		font-size: 0.85em;
+	}
+}
